fixed menu out of the box

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -8067,6 +8067,7 @@ body:not(.is-loaded) .header__desktop {
   display: block;
   width: 100%;
   height: 100%;
+  max-height: 100px;
   object-fit: contain;
 }
 
@@ -9412,7 +9413,7 @@ html.supports-touch ticker-bar[data-slide]:not([paused]) .ticker--animated {
 
 .mobile-menu__block-inner {
   background: var(--bg);
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -9879,6 +9880,22 @@ header-search-popdown.is-open .search-popdown {
   overflow: hidden;
 }
 
+.sliderow__image-wrapper {
+  overflow-x: scroll;
+}
+
+.sliderow__image__scroll-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.sliderow__image-wrapper .menu__block {
+  min-width: 400px;
+  height: auto;
+}
+
 .sliderow--back {
   --bg: var(--COLOR-BG);
   top: 0;
@@ -9917,6 +9934,7 @@ header-search-popdown.is-open .search-popdown {
   align-items: center;
   justify-content: flex-start;
   background: var(--bg);
+  color: var(--link);
   padding: 0;
   font-size: calc(var(--font-nav-large) * var(--FONT-SIZE-NAV));
   text-transform: inherit;
@@ -10084,9 +10102,9 @@ header-search-popdown.is-open .search-popdown {
   padding: var(--inner);
 }
 
-.sliderule-grid .menu__block:not(:first-child) {
+/* .sliderule-grid .menu__block:not(:first-child) {
   padding-top: 0;
-}
+} */
 
 .header__mobile__hamburger {
   position: absolute;
